@@ -1,3 +1,9 @@
+2025-01-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/functions.R: Switch class comparison to inherits
+
+	* .github/workflows/ci.yaml: Simplify to r-ci with included bootstrap
+
 2024-10-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Authors@R): Added
